tests/ui/rfcs/rfc-2632-const-trait-impl/assoc-type-const-bound-usage.stderr
error: `~const` is not allowed here
  --> $DIR/assoc-type-const-bound-usage.rs:7:17
   |
LL |     type Assoc: ~const Foo;
   |                 ^^^^^^^^^^
   |
   = note: this item cannot have `~const` trait bounds

error[E0308]: mismatched types
  --> $DIR/assoc-type-const-bound-usage.rs:12:5
   |
LL |     <T as Foo>::Assoc::foo();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ expected `host`, found `true`
   |
   = note: expected constant `host`
              found constant `true`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
